Fix image paths and layout issues

--- a/style.css
+++ b/style.css
@@ -3,25 +3,139 @@
     padding: 0%;
 }
 body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
     width: 100vw;
    
 }
 .main{
-    height: 100%;
     width: 100%;
 }
 #nav{
+    position: fixed;
+    top: 0;                
+    left: 0;             
+    z-index: 9999;
     height: 44px;
     width: 100%;
    display: flex;
-  background-color:  rgba(22, 22, 23, 1);
+ background-color: rgba(22, 22, 23, 0.8);
   justify-content: center;
    align-items: center;
    gap: 30px;
+ 
 }
 nav >a{
     font-size: medium;
    color: rgb(181, 181, 181);
    text-decoration: none;
+}
+.wdc-logo{
+ 
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: black;
+}
+.wdc-logo >img{
+    height: 160px;
+    width: 28%;
+}
+.wdc-logo > #s1{
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+ font-size: 25px;
+ /* font-weight: bold; */
+ color: rgb(239, 248, 255);
+}
+.wdc-logo > #s2{
+margin-top: 5px;
+margin-bottom: 5px;
+}
+.wdc-logo > #s2 >a{
+  font-size: 16px;
+  text-decoration: none;
+  color: gray;
+}
+.btns{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.btns > #btn1{
+    height: 50px;
+    width: 15%;
+    border-radius: 40px;
+    font-size: 17px;
+    background-color: #0071e3;
+    color: #ffffff;
+    
+}
+.btns > #btn2{
+    height: 50px;
+    width: 15%;
+    border-radius: 40px;
+    font-size: 17px;
+    background-color: black;
+    border: 2px solid #0071e3 ;
+    color: #0071e3;
+
+}
+
+.btns > #btn2:hover {
+    color: #ffffff;
+    background-color: #0071e3;
+}
+.pic1 >img{
+    margin-top: 50px;
+    height: auto;
+    width: 80%;
+    margin-left: 80px;
+}
+.parent2{
+    margin-top: 10px;
+}
+.college-mac-pic{
+    margin-top: 10px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: #F5F5F7;
+}
+.college-mac-pic >h3{
+    font-size: 45px;
+   
+}
+#s3{
+    font-size: 25px;
+}
+.college-mac-pic >#btn3{
+    margin-top: 10px;
+    height: 40px;
+    width: 8%;
+    border-radius: 40px;
+    font-size: 17px;
+    background-color: #0071e3;
+    border: 2px solid #0071e3 ;
+    color: #ffffff;
+}
+.pic2{
+    display: flex;
+}
+.pic2 >img{
+    
+    height:auto;
+    width: 100%;
+    overflow: hidden;
+}
+.parent3{
+    display: flex;
+    
+}
+.parent3 >.pic3{
+    width: 50%;
+    height: 100%;
+}
+.parent3 >.pic4{
+    width: 50%;
+    height: 100%;
 }
